tests/invalidTest/typeConvert/test_uint8.q
# EXPECT type cannot be converted
def uint16 test(){
     uint8 var0 = 256    #def & constant num
  return 0
}

